# wagtail

./: .babelrc  .babelrc.json  .coveragerc  .drone.yml  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .hgtags  .isort.cfg  .jscsrc  .nvmrc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .renovate.json  .scrutinizer.yml  .scss-lint.yml  .semgrep.yml  .squash.yml  .stylelintignore  .stylelintrc.js  .stylelintrc.yaml  .travis.yml  0001-locales-views-translate-string.patch  0002-search-fix-reverse-ordering-with-elasticsearch-backe.patch  AGENTS.md  BUG_REPORT_PAGE_SAVE_REVISION.md  CHANGELOG.txt  CHANGES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockerfile  LICENSE  (+46 more)
.circleci/: conditional-builds.sh  config.yml  continue_config.yml  groups.json  monorepo.json  monorepo.sh  trigger-nightly-build.sh
.github/: BUG_REPORT.md  CONTRIBUTING.md  FEATURE_REQUEST.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  latest-deps-overrides.txt  renovate.json  renovate.jsonc
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUG_REPORT.yml  DOCUMENTATION.md  DOCUMENTATION.yml  FEATURE_REQUEST.md  FEATURE_REQUEST.yml  GSOC.md  MAINTENANCE.yml  QUESTION.md  config.yml
.github/workflows/: codeql-analysis.yml  docs.yml  greetings.yml  latest-deps.yml  lint.yml  test.yml  zizmor.yml
.tx/: config
client/: README.md  extract-translatable-strings.js  package-lock.json  package.json  rspack.config.js  string-replaceall-loader.js  tailwind.config.js  webpack.base.config.js  webpack.config.js  webpack.config.js.rej  webpack.prd.config.js
client/.storybook/: main.js  preview.js
client/scss/: _components.scss  _legacy.scss  (+9 more)
docs/: Makefile  README  README.md  _redirects.csv  advanced_topics.rst  autobuild.sh  building_your_site.rst  conf.py  contributing.rst  deploying.rst  documentation-types.rst  documentation_factory_demo.rst  editing_api.rst  form_builder.rst  frontend_cache_purging.rst  getting_started.rst  gettingstarted.rst  image_feature_detection.rst  index.rst  install.rst  management_commands.rst  model_recipes.rst  mp_tree.rst  multilingual_sites.rst  panels.rst  performance.rst  private_pages.rst  readthedocs.yml  requirements.txt  roadmap.rst  robots.txt  routable_page.rst  settings.rst  sitemap_generation.rst  sites.rst  snippets.rst  spelling_wordlist.txt  static_site_generation.rst  streamfield.md  support.md  (+6 more)
env/: pyvenv.cfg
etc/: nginx.conf.sample  uwsgi.conf.sample
gulp/: reactor.js
gulpfile.js/: config.js  index.js  scaffold.js
myenv/: pyvenv.cfg
myproject/: Dockerfile  db.sqlite3  manage.py  requirements.txt
mysite/: Dockerfile  db.sqlite3  manage.py  requirements.txt  test_novo.py
scripts/: check-dependencies.mjs  check-translation-strings.py  fetch-translations.sh  find-duplicates.py  get-translator-credits.py  latest-deps-summary.py  latest.sh  latest.txt  make-latest.sh  rebuild-translation-sources.sh  translators.txt  write-translators-credits.py
testsite/: Dockerfile  db.sqlite3  manage.py
treebeard/: __init__.py  admin.py  mp_tree.py
wagtail/: .eslintignore  .gitignore  .readthedocs.yml  CONTRIBUTORS.md  __init__.py  apps.py  checks.py  compat.py  coreutils.py  custom_check.py  edit_handlers.py  exceptions.py  fields.py  forms.py  hooks.py  jinja2tags.py  locks.py  log_actions.py  logging.py  permissions.py  prettier.config.js  pyvenv.cfg  query.py  renderers.py  runtests.py  setup.py  signal_handlers.py  signals.py  system_check_custom.py  tailwind.config.js  tasks.py  telepath.py  treebeard.py  url_routing.py  urls.py  views.py  wagtail_hooks.py  whitelist.py  widget_adapters.py  workflows.py
(+12208 files in other folders)
